Structure类重构